examples/invalid_struct_field_type/src/main.pg
struct Hero {
    hp: int
    alive: bool
    name: string
}

func main() {
    let hero = Hero { hp: true, alive: true, name: "ping" };
}
